fix: add missing color to linkedin icon for share list (#683)

--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -298,6 +298,10 @@ nav[data-toggle=toc] {
         @include btn-sharing-color(rgb(39, 159, 217));
       }
 
+      &.fa-linkedin {
+        @include btn-sharing-color(rgb(0, 119, 181));
+      }
+
       &.fa-weibo {
         @include btn-sharing-color(rgb(229, 20, 43));
       }
